<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranja_claro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_plato"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/rojo_principal"
            android:layout_marginBottom="25dp"/>


        <!-- NOMBRE -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_plato"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!-- CATEGORIA -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>


        <Spinner
            android:id="@+id/spCategoria"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:entries="@array/categorias_platos"
            android:background="@android:color/white"
            android:padding="10dp"
            android:layout_marginBottom="15dp"/>


        <!-- PRECIO -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!-- DISPONIBLE -->

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/swDisponible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disponible"
            android:checked="true"
            android:layout_marginBottom="25dp"/>


        <!-- GUARDAR -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/guardar"
            android:textColor="@color/blanco"
            android:textSize="17sp"
            app:backgroundTint="@color/naranja_principal"/>

    </LinearLayout>

</ScrollView>